--- a/calcular dolares/nbproject/private/private.properties
+++ b/calcular dolares/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\vinicius.cobucci\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\27\\build.properties
