--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /javametodos3/build/
 /javametodos4/nbproject/private/
 /javametodos4/build/
+/ PrjTestarClasseAbstrata/nbproject/private/
+/projeto.navio/nbproject/private/
+/PrjTestarClasseAbstrata/nbproject/private/
+/PrjTestarClasseAbstrata/build/
